RESOLVED FIXED114685
[BlackBerry] Accelerated animation regression with GL renderer
https://bugs.webkit.org/show_bug.cgi?id=114685
Summary [BlackBerry] Accelerated animation regression with GL renderer
Alberto Garcia
Reported 2013-04-16 07:01:19 PDT
The fix for PR #254167 hasn't been upstreamed completely, here are the missing hunks.
Attachments
Patch (5.15 KB, patch)
2013-04-16 07:04 PDT, Alberto Garcia
no flags
Alberto Garcia
Comment 1 2013-04-16 07:04:04 PDT
Arvid Nilsson
Comment 2 2013-04-16 07:15:54 PDT
LGTM
Rob Buis
Comment 3 2013-04-16 07:22:54 PDT
Comment on attachment 198328 [details] Patch Ok.
WebKit Commit Bot
Comment 4 2013-04-16 08:05:58 PDT
Comment on attachment 198328 [details] Patch Clearing flags on attachment: 198328 Committed r148512: <http://trac.webkit.org/changeset/148512>
WebKit Commit Bot
Comment 5 2013-04-16 08:06:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.